opam-version: "2.0"
name: "git-fuse"
version: "0.1"
synopsis: "Binary for mouting a git object store as a FUSE file system"
maintainer: "Bogdan Tataroiu <b.tataroiu@gmail.com>"
authors: [ "Bogdan Tataroiu <b.tataroiu@gmail.com>" ]
depends: [
  "async"
  "core"
  "git"
  "ocamlfuse"
  "ppx_jane"
  "dune"       {build}
  "ocaml"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
